fix: vertical alignment for proposals and side-effect for labels

--- a/decidim-proposals/app/packs/stylesheets/decidim/proposals/proposals.scss
+++ b/decidim-proposals/app/packs/stylesheets/decidim/proposals/proposals.scss
@@ -103,7 +103,7 @@
   }
 
   &__grid-text-title {
-    @apply flex justify-between flex-row md:flex-col md:items-start lg:flex-row;
+    @apply flex justify-between flex-row md:flex-col items-start lg:flex-row;
   }
 
   &__list-metadata {
